fix Rental